# gbrain

./: .dockerignore  .env.local.example  .env.production.example  .env.saas.example  .env.selfhost.example  .env.testing.example  .gitignore  .gitleaks.toml  AGENTS.md  AIMS-BRAIN.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.sqlite  INSTALL_FOR_AGENTS.md  KBRAIN_OVERLAY.md  LOCAL_PATCHES.md  Procfile  README-3.md  README.md  REFACTOR-PROMPT.md  SECURITY.md  SUPPORT.md  TODOS.md  UPSTREAM.md  VERSION  biome.json  bunfig.toml  cortex.plugin.json  cortex.yml  coverage-ratchet.baselines.json  coverage-ratchet.config.json  docker-compose.saas.yml  docker-entrypoint.sh  fly.toml.example  handoff.md  (+15 more)
.agent_memory/: README.md  inbox.json  metrics.json
.claude/: launch.json
.claude-plugin/: plugin.json
.devcontainer/: Dockerfile
.understand-anything/: fingerprints.json  meta.json
admin/: DESIGN.md  next.config.mjs  package.json  tsconfig.json
chatgpt-clusters/: ai-tools-agents-prompts.md  business_startup.md  code_review.md  coding-web-development.md  coding_ai.md  coding_devops.md  coding_mobile.md  coding_troubleshoot.md  coding_web_dev.md  design_ux.md  fitness-health-body.md  food-drink-bartending.md  jovie-product-strategy.md  jovie_music.md  legal-insurance-contracts.md  music-production-and-dj.md  personal_finance.md  personal_health.md  personal_life.md  (+5 more)
deploy/: DEPLOY.md  (+8 more)
sidecar/docling-service/: .gitignore  README.md  app.py  docir.py  docling_runtime.py  pyproject.toml  render.py  requirements.txt
(+14289 files in other folders)
